<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="loading">加载中</string>
    <string name="live_msg_title">直播消息:</string>
    <string name="live_msg_auction_title">竞拍消息:</string>
    <string name="live_msg_shopping_title">购物消息:</string>
    <string name="live_creater_leave">主播离开一下，精彩不中断，不要走开哦</string>
    <string name="live_creater_come_back">主播回来啦，视频即将恢复</string>
    <string name="live_light">我点亮了</string>
    <string name="live_send_msg_hint_normal">和大家说点什么</string>
    <string name="live_account">帐号</string>
    <string name="live_ticket">G币</string>
    <string name="live_account_authentication">我的</string>
    <!-- 首页关注标签文字-->
    <string name="live_tab_follow_text">关注</string>
    <string name="live_tab_hot_text">热门</string>
    <string name="live_tab_new_text">附近</string>
    <!-- PC端直播间标签文字-->
    <string name="room_pc_tab_chat_text">聊天</string>
    <string name="room_pc_tab_con_text">贡献榜</string>
    <string name="room_pc_tab_live_text">直播</string>
    <!--排行榜-->
    <string name="live_ranking_tab_merits_text">收入榜</string>
    <string name="live_ranking_tab_contribution_text">消费榜</string>
    <!--充值页面-->
    <string name="live_recharge_exchange">充值</string>
    <!-- 编辑页面-情感状态字段-->
    <string-array name="affective_state">
        <item>保密</item>
        <item>单身</item>
        <item>恋爱中</item>
        <item>已婚</item>
        <item>同性</item>
    </string-array>
    <string-array name="sp_pk_time">
        <item>选择PK时间</item>
        <item>1分钟</item>
        <item>5分钟</item>
        <item>10分钟</item>
        <item>30分钟</item>
    </string-array>
    <string-array name="gift_text">
        <item>一心一意(1)</item>
        <item>由衷赞赏(5)</item>
        <item>十全十美(10)</item>
        <item>浪漫邂逅(20)</item>
        <item>V(50)</item>
        <item>笑脸(100)</item>
        <item>爱你久久(299)</item>
        <item>我爱你(520)</item>
    </string-array>
    <integer-array name="gift_num">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>299</item>
        <item>520</item>
    </integer-array>
    <string name="game_currency">游戏币</string>
    <string name="exchange_game_currency">兑换游戏币</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_content">“宇宙不爆炸，直播就不下”风里雨里我在千秀开播要撩你</string>

    <string name="live_pk_hint">输入主播昵称或ID</string>
    <string name="show_focus">喜欢主播点关注，关注主播不迷路！</string>
    <!--<string name="time_limit">&#061</string>-->

    <!-- 邀请奖励 -->
    <string name="invite_rewards">邀请奖励</string>
    <string name="account_balance1">账户余额：</string>
    <string name="drill">钻</string>
    <string name="diamond">元</string>
    <string name="transfer_to_my_account">转入我的帐户</string>
    <string name="alipay_withdrawal">支付宝提现</string>
    <string name="my_invite">我邀请的人</string>
    <string name="copy_invitation_link">复制邀请链接</string>
    <string name="successfully_invited">您已成功邀请%1$s位好友,奖励%2$s元</string>
    <string name="copy_success">复制成功</string>
    <!--<string name="invite_intro">邀请说明:\n1、好友通过您的专属链接进行注册VIP观看，您就可以获得相应的奖历\n2、成功邀请一位好友开通VIP可得50%现金可兑换为相应钻石,用户充值永久返利50%\n3、现金可以提现(满30元即可提现)也可以以钻石形式转入到自己的帐户中\n4、邀请数据每天1:00进行汇总\n5、恶意注册,会被取消相应的奖历,后台进行人工审核</string>-->
    <string name="invite_intro"></string>
    <!-- 支付宝提现奖励 -->
    <string name="available_diamond">可用钻石：</string>
    <string name="amount_available">可用金额：</string>
    <string name="withdrawal_amount">提现金额：</string>
    <string name="alipay_account">支付宝帐号：</string>
    <string name="payee_name">收款人姓名：</string>
    <string name="input_available_diamond">最大提现金额为%1$s</string>
    <string name="input_amount_available">请输入可用金额</string>
    <string name="input_withdrawal_amount">请输入提现金额</string>
    <string name="input_alipay_account">请输入支付宝帐号</string>
    <string name="input_payee_name">请输入收款人姓名</string>
    <string name="withdrawal">提现</string>
    <string name="withdrawal_success">提现成功</string>
    <string name="transfer_to_success">转入成功</string>

</resources>